...
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:nextFocusDown="@id/btnLoginFrag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleLogin"
            app:panelBackgroundColor="@color/code_edit_text_background"
            app:primaryColor="@color/code_edit_text_bottom_line"
            app:secondaryColor="@color/outwait_color_dark">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/etInstituteName"
...
                android:singleLine="true"
                android:text="@={viewModel.instituteName}" />

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

        <com.lukelorusso.codeedittext.CodeEditText
            android:id="@+id/etSlotCode"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:foregroundGravity="center"
...
